# suivi-meteo

./: .gitignore  pyproject.toml
notebooks/: scraping.ipynb  weather_analysis.ipynb
suivi_meteo/: functions.py
tests/: tests.ipynb
